--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1" />
       <meta name="theme-color" content="#000000" />
       <meta name="description" content="Web site created using create-react-app" />
+      <link rel="shortcut icon" type="image/*" href="./3238057.png" />
       <title>Stationery</title>
    </head>
    <body>
